<resources>
    <string name="app_name">Meds Reminder</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="user">User</string>
    <string name="add_medication_plan">Add Medication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab">FAB button</string>
    <string name="cd_app_icon">App icon</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name_label">User name</string>
    <string name="send_email">Send email</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="email_sent">Email sent successfully, check your Inbox</string>
    <string name="cd_dashboard_select_date_button">Select date</string>
    <string name="cd_dashboard_recycler_view_item_drawable">drug drawable</string>
    <string name="sr_dashboard_recycler_view_item_separator_text">-</string>
    <string name="addMedicationPlan_pills_name_sr">Pills name</string>
    <string name="AddMedicationPlan_pills_name_label">Pills name</string>
    <string name="addMedicationPlan_pills_amount_howLong">Amount &amp; How long?</string>
    <string name="AddMedicationPlan_pills_amount_label">Amount</string>
    <string name="AddMedicationPlan_pills_how_long_label">How long?</string>
    <string name="days">days</string>
    <string name="pills">pills</string>
    <string name="addMedicationPlan_pills_meals">Food &amp; Pills</string>
    <string name="after">After</string>
    <string name="during">With</string>
    <string name="before">Before</string>
    <string name="addMedicationPlan_pills_howOften">How often?</string>
    <string name="AddMedicationPlan_pills_howOften_label">How Often?</string>
    <string name="hours">Hours</string>
    <string name="add_plan">Add Plan</string>
    <string name="dashboard_card_plan_sr">Your plan for Today</string>
    <string name="dashboard_card_plan_progress_text_sr">%1$d of %2$d completed</string>
    <string name="dashboard_card_plan_progress_percentage_sr">%1$d%%</string>
    <string name="dashboard_daily_review_text_sr">Daily Review</string>
    <string name="empty_field">Required field empty</string>
    <string name="dashboard_datepicker_title">Select Day</string>
    <string name="dashboard_RV_item_hour_sr">%1$02d:%2$02d</string>
    <string name="appointment_RV_item_hour_sr">%1$02d:%2$02d</string>
    <string name="appointment_RV_item_date_sr">%1$d, %2$s</string>
    <string name="dashboard_RV_item_pill_number_sr">%1$s Pill</string>
    <string name="rv_item_status_during_meals_sr">During Meals</string>
    <string name="rv_item_status_after_meals_sr">After Meals</string>
    <string name="rv_item_status_before_meals_sr">Before Meals</string>
    <string name="rv_item_status_skipped_sr">Skipped</string>
    <string name="rv_item_status_completed_sr">Completed</string>
    <string name="notification_taking_reminder">Remember to take the %1$s pill!</string>
    <string name="notification_appointment_reminder">Remember to assist to %1$s on %2$s at %3$s!</string>
    <string name="channel_name">Taking notification channel</string>
    <string name="channel_description">Taking reminder notifications</string>
    <string name="taking_notification_title">Pending Taking</string>
    <string name="calendar_medication_taking_title_sr">Medication Takings:</string>
    <string name="add_appointment_sr">Add Appointment</string>
    <string name="addAppointment_pills_name_sr">Appointment type</string>
    <string name="addAppointment_type_label">Appointment type</string>
    <string name="addAppointment_location_text_sr">Location</string>
    <string name="addAppointment_location_label">Location</string>
    <string name="addAppointment_date_text_sr">Date</string>
    <string name="addAppointment_hour_text_sr">Hour</string>
    <string name="addAppointment_select_date_button_cd">Select date button</string>
    <string name="addAppointment_select_hour_button_cd">Select hour button</string>
    <string name="addAppointment_submit_button_text">Add Appointment</string>
    <string name="addAppointment_timepicker_title">Select Time</string>
    <string name="addAppointment_binding_hour_text">%1$02d:%2$02d:%3$02d</string>
    <string name="addAppointment_reminder_text_sr">Reminder</string>
    <string name="addAppointment_reminder_label">Hours Before</string>
    <string name="appointments_notification_title">Appointment</string>
    <string name="appointments_channel_name">Appointment Channel</string>
    <string name="appointments_channel_description">Appointment channel</string>
    <string name="cd_appointments_recycler_view_item_drawable">Icon</string>
    <string name="sr_appointments_recycler_view_item_separator_text">-</string>
    <string name="appointments_today_appointments_text_sr">Today Appointments</string>
    <string name="cd_appointments_select_date_button">Select date button</string>

</resources>